--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 * {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   box-sizing: border-box;
   font-family: Tahoma,sans-serif,Helvetica,Arial;
   scroll-behavior: smooth;
@@ -14,6 +14,3 @@ body {
   background: #ebebeb;
 }
 
-.swiper-pagination-bullet {
-  display: none;
-}
